feat: JSpecify 1.0.0.
Change-Id: I84cc903128d013ff7f6b6cee29353abbe0a84fc8